Add SBB clock. Fix ticking.

--- a/pmck.1
+++ b/pmck.1
@@ -16,8 +16,21 @@ with \fIxwininfo\fP. It is a hex value such as 0x400066, so the command
 would be \fBpmck 0x400066\fP.
 .TP
 There are no other command line options however a \fIpmckrc\fP file in
-\fIXDG_CONFIG_HOME\fP may be used to control position, size and colour
+\fIXDG_CONFIG_HOME\fP 
+may be used to control position, size and colour
 of the desktop clock. A sample \fIpmckrc\fP is at \fI/usr/share/pmck/pmckrc\fP
+.TP
+.TP
+Four styles are supported
+.TP
+0 - plain numbers
+.TP
+1 - Roman numerals with a decorative circle on the face
+.TP
+2 - strokes instead of numbers
+.TP
+3 - SBB, the Classic Swiss Railways Clock 
+.TP
 .TP
 To quit the clock, click on it's face and press \fIQ\fP
 .SH FILES
