Change documentation to refer to $HOME/.config #1

--- a/pmck.1
+++ b/pmck.1
@@ -16,7 +16,7 @@ with \fIxwininfo\fP. It is a hex value such as 0x400066, so the command
 would be \fBpmck 0x400066\fP.
 .TP
 There are no other command line options however a \fIpmckrc\fP file in
-\fIXDG_CONFIG_HOME\fP 
+\fI$HOME/.config\fP 
 may be used to control position, size and colour
 of the desktop clock. A sample \fIpmckrc\fP is at \fI/usr/share/pmck/pmckrc\fP
 .TP
