Update README and man page

--- a/pmck.1
+++ b/pmck.1
@@ -21,7 +21,7 @@ may be used to control position, size and colour
 of the desktop clock. A sample \fIpmckrc\fP is at \fI/usr/share/pmck/pmckrc\fP
 .TP
 .TP
-Four styles are supported
+Four styles are supported (0 - 3)
 .TP
 0 - plain numbers
 .TP
@@ -30,6 +30,16 @@ Four styles are supported
 2 - strokes instead of numbers
 .TP
 3 - SBB, the Classic Swiss Railways Clock 
+.TP
+Four hand types (deco) are supported (0 - 3)
+.TP
+0 - modern
+.TP
+1 - fancy
+.TP
+2 - classic
+.TP
+3 - SBB
 .TP
 .TP
 To quit the clock, click on it's face and press \fIQ\fP
