--- a/pmck.1
+++ b/pmck.1
@@ -1,11 +1,11 @@
-.TH PMCK 1 "12 September 2014"
+.TH PMCK 1 "01 May 2015"
 .SH NAME
 pmck \- a poor man's clock
 .SH SYNOPSIS
 \fBpmck\fP [ \frroot window\fP ]
 .SH DESCRIPTION
 \fBpmck\fP displays a desktop analog
-clock \fIXwindow\fP on your screen at 
+clock \fIXWindow\fP on your screen at 
 the specified position according to the \fBpmckrc\fP
 .SS Options
 .TP
@@ -47,20 +47,20 @@ To quit the clock, click on it's face and press \fIQ\fP
 .TP
 \fI/usr/bin/pmck\fR
 .TP
-\fI/usr/share/pmckrc\fR
+\fI/usr/share/pmck/pmckrc\fR
 .SH "SEE ALSO"
 xwininfo(5)
 .SH BUGS
 .TP
-May not redraw fast when covered by another window.
+May not redraw fast when covered by another window on slow hardware.
 .TP
-May skip seconds however will catch up.
+May skip seconds on very slow hardware, however will catch up.
 .SH "AUTHOR"
 .IX Header "AUTHOR"
 Michael Amadio - 01micko@gmail.com
 .SH "COPYRIGHT AND LICENSE"
 .IX Header "COPYRIGHT AND LICENSE"
-\&\fBCopyright (C)\fR 2014 by Author.  
+\&\fBCopyright (C)\fR 2015 by Author.  
 .PP
 \&\fBpmck\fR is free software; you can redistribute it and/or modify it
 under the terms of the \s-1GPL-v2.0\s0.
